<resources>
    <string name="app_name">帝迅通</string>
    <string name="company_name">帝迅通</string>
    <string name="gd_1">充值</string>
    <string name="gd_2">公司主页</string>
    <string name="gd_3">余额查询</string>
    <string name="gd_4">兑现设置</string>
    <string name="gd_5">商城</string>
    <string name="gd_6">软件升级</string>
    <string name="gd_7">客服热线</string>
    <string name="gd_8">呼叫设置</string>
    <string name="login_out">退出登录</string>
    <string name="title_setting">通话设置</string>
    <string name="re_tel">呼叫</string>
    <string name="cancel">取消</string>
    <string name="auto_answer">自动接听</string>
    <string name="external_call">外部呼叫</string>
    <string name="background_music">背景音乐</string>
    <string name="confirm">确认</string>
    <string name="query_balance">查询余额</string>
    <string name="balance">余额</string>
    <string name="pull_to_refresh_pull_label">向下拉动可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中…</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
    <string name="umeng_socialize_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_socialize_comment">评论</string>
    <string name="umeng_socialize_comment_detail">评论详情</string>
    <string name="umeng_socialize_back">返回</string>
    <string name="umeng_socialize_near_At">最近@的好友</string>
    <string name="umeng_socialize_friends">关注的好友</string>
    <string name="umeng_socialize_send">发布</string>
    <string name="umeng_socialize_tip_blacklist">对不起，因为违反了用户协议您已被禁言.</string>
    <string name="umeng_socialize_tip_loginfailed">登录失败…</string>
    <string name="umeng_socialize_msg_sec">秒前</string>
    <string name="umeng_socialize_msg_min">分钟前</string>
    <string name="umeng_socialize_msg_hor">小时前</string>
    <string name="umeng_socialize_ucenter_login_title_guide">游客登录</string>
    <string name="umeng_socialize_ucenter_login_title_platform">登录帐号</string>
    <string name="umeng_socialize_share_content">友盟社会化组件（SDK）让移动应用快速整合社交分享功能，我们简化了社交平台的接入，为开发者提供坚实的基础服务。（一）支持各大主流社交平台， （二）支持图片、文字、gif动图、音频、视频；@好友，关注官方微博等功能。 （三）提供详尽的后台用户社交行为分析。www.umeng.com/social</string>
    <string name="umeng_socialize_login_qq">QQ空间</string>
    <string name="umeng_socialize_login">登录</string>
    <string name="umeng_socialize_text_choose_account">选择已有帐号登录</string>
    <string name="umeng_socialize_text_authorize">授权</string>
    <string name="umeng_socialize_text_unauthorize">未授权</string>
    <string name="umeng_socialize_text_ucenter">个人中心</string>
    <string name="umeng_socialize_text_login_fail">登录失败了，请重试</string>
    <string name="umeng_socialize_text_comment_hint">说点什么吧…</string>
    <string name="umeng_socialize_text_friend_list">好友列表</string>
    <string name="umeng_socialize_text_visitor">游客</string>
    <string name="umeng_socialize_text_tencent_no_connection">无法连接到腾讯微博客户端</string>
    <string name="umeng_socialize_text_tencent_oauth_login_fail">授权登录失败</string>
    <string name="umeng_socialize_text_tencent_version_no_match">版本不匹配，SSO只对微博客户端V3.8.1及以上的版本提供支持</string>
    <string name="umeng_socialize_text_tencent_no_install">未安装腾讯微博客户端</string>
    <string name="umeng_socialize_text_waitting">请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin">跳转微信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin_circle">跳转朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_yixin">跳转易信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_yixin_circle">跳转易信朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qq">跳转QQ中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qzone">跳转QZone中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_redirect">跳转</string>
    <string name="umeng_socialize_text_waitting_message">,请稍候...</string>
    <string name="umeng_socialize_text_loading_message">载入中,请稍候...</string>
    <string name="umeng_socialize_text_tencent_key">腾讯微博</string>
    <string name="umeng_socialize_text_sina_key">微博</string>
    <string name="umeng_socialize_text_qq_key">QQ</string>
    <string name="umeng_socialize_text_qq_zone_key">QQ空间</string>
    <string name="umeng_socialize_text_renren_key">人人网</string>
    <string name="umeng_socialize_text_douban_key">豆瓣网</string>
    <string name="umeng_socialize_text_weixin_key">微信</string>
    <string name="umeng_socialize_text_weixin_circle_key">微信朋友圈</string>
    <string name="umeng_socialize_text_add_custom_platform">请配置用户平台</string>
    <string name="umeng_example_home_btn_plus">社交分享</string>
    <string name="umeng_socialize_text_waitting_share">分享中…</string>
    <string name="umeng_socialize_content_hint">说点啥…</string>
    <string name="umeng_socialize_cancel_btn_str">取消</string>
    <string name="umeng_socialize_send_btn_str">发送</string>
    <string name="umeng_socialize_img_des" />
    <string name="umeng_socialize_share">分享</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="pushadvertise_download">下 载</string>
    <string name="pushadvertise_detail">详 情</string>
    <string name="login">登录</string>
    <string name="text_btn_init">百度账号绑定</string>
    <string name="text_btn_init1">更换百度账号</string>
    <string name="text_btn_on_push">打开Push</string>
    <string name="text_btn_off_push">关闭Push</string>
    <string name="log_tip">日志：</string>
    <string name="clear_log">清除日志</string>
    <string name="text_btn_rich">富媒体消息</string>
    <string name="text_btn_initAK">无账号绑定</string>
    <string name="text_btn_setTags">设置标签</string>
    <string name="text_btn_delTags">删除标签</string>
    <string name="text_btn_senior">高级功能</string>
    <string name="text_btn_set">设置</string>
    <string name="text_media_title">富媒体消息列表</string>
    <string name="media">Rich Media</string>
    <string name="custom_text_hint">用户自定义行为打开的Activity</string>
    <string name="tags_hint">请输入多个标签，以英文逗号隔开</string>
    <string name="text_btn_showTags">列举标签</string>
    <string name="text_btn_unbind">解绑</string>
    <string name="text_btn_setunDisturb">免打扰时间</string>
    <string name="text_btn_ad_style_1">广告样式1</string>
    <string name="text_btn_ad_style_2">广告样式2</string>
    <string name="text_btn_ad_style_3">广告样式3</string>
    <string name="text_btn_ad_style_4">广告样式4</string>
    <string name="text_btn_ad_style_5">广告样式5</string>
    <string name="text_btn_ad_style_all">广告一键推送</string>
    <string name="text_btn_feedback">问题反馈</string>
    <string name="default_suggest">您好！感谢您参与百度Push广告推送众测活动！如果您在体验过程中有任何建议和问题，请给我们留言反馈！如果方便请您留下您的手机号、QQ、微信等联系方式，以方便我们更加及时地回复您，谢谢！</string>
    <string name="text_about">"百度Push Android SDK 4.5.1
 时间：2015年6月18日
 Change Log：
 1. 增加广告相关内容 
 2. 添加广告相关资源文件 
 3. 适配多种机型 
"</string>
    <string name="text_help">"百度hi官方技术讨论群：1405944
 QQ群1：348807820（可加）
 QQ群2：242190646（可加）
 QQ群3：324533810（可加）
 云推送微信公众账号：云推送（微信号：baidu-push）
"</string>
    <string name="tab_dial">拨号</string>
    <string name="tab_contact">联系人</string>
    <string name="tab_recharge">推荐</string>
    <string name="tab_find">发现</string>
    <string name="tab_account">账户</string>
    <string name="tab_recommend">推荐</string>
    <string name="short_num">号码太短</string>
    <string name="my_qr_code">我的二维码</string>
    <string name="contact_search">可输入汉字、拼音、数字搜索</string>
    <string name="kefu_time">工作时间:早9点至晚21点</string>
    <string name="app_channel">CHANNEL1318</string>
    <string name="com_ok">确定</string>
    <string name="com_cancel">取消</string>
    <string name="next">下一步</string>
    <string name="complete">完成</string>
    <string name="com_repet">重试</string>
    <string name="wxts">温馨提示</string>
    <string name="dial_deyx">全民赚</string>
    <string name="dial_mobile">本机拨号</string>
    <string name="dial_pro">拨号提示</string>
    <string name="net_set">设置</string>
    <string name="web_title">官方网站</string>
    <string name="about_title">关于我们</string>
    <string name="gamecenter_title">游戏中心</string>
    <string name="about_version">版本号：V%s</string>
    <string name="about_web">官方网站</string>
    <string name="about_wap">手机网站</string>
    <string name="about_phone">客服电话</string>
    <string name="about_qq">客服 Q Q</string>
    <string name="about_c">"全民赚通信（国际）股份有限公司
Copyright 全民赚©2013-2020"</string>
    <string name="balance_title">我的账户信息</string>
    <string name="account_title">个人信息</string>
    <string name="sms_spread_text">hi,我正在使用【全民赚】免费打电话,推荐你用一下。下载地址：http://xz.deyx365.com/</string>
    <string name="msgnull">暂无公告信息</string>
    <string name="notice_title">公告消息</string>
    <string name="notice_more">系统公告</string>
    <string name="pwdset_title">修改密码</string>
    <string name="pwdset_rule">6-15位字母数字组合</string>
    <string name="pwdfind_title">找回密码</string>
    <string name="phoneset_title">改绑手机</string>
    <string name="phoneset_rule">修改规则：年卡用户直接修改手机号码，按照流程提示即可更改，月卡用户绑定后将不能修改！</string>
    <string name="mealfail">"充值套餐获取失败
点击刷新"</string>
    <string name="manycall_title">多人通话</string>
    <string name="pic_choose">选择图片</string>
    <string name="dial_title">通话记录</string>
    <string name="contact_title">联系人</string>
    <string name="contact_detail_title">联系人详情</string>
    <string name="calllog_detail_title">通话详情</string>
    <string name="chat_title">消息</string>
    <string name="friends_add">添加好友</string>
    <string name="friends_title">好友列表</string>
    <string name="friends_deyx">服务号</string>
    <string name="recharge_title">充值中心</string>
    <string name="recharge_way_title">选择充值方式</string>
    <string name="rech_100">100元包3个月，面值100</string>
    <string name="rech_50">100元包3个月，两张面值50</string>
    <string name="rech_30">计时充值金额30元</string>
    <string name="rech_50t">计时充值金额50元</string>
    <string name="card_deyx">充值卡充值</string>
    <string name="card_cmcc">移动卡充值</string>
    <string name="card_unicom">联通卡充值</string>
    <string name="more_title">设置</string>
    <string name="msg_title">消息</string>
    <string name="recharge_alipay">alipay</string>
    <string name="alipay_body">alipay</string>
    <string name="server"><u>点击联系客服</u></string>
    <string name="login_title">全民赚登录</string>
    <string name="login_phone">手机：</string>
    <string name="login_account">账号：</string>
    <string name="login_pwd">密码：</string>
    <string name="login_forgetpwd"><u>忘记密码？</u></string>
    <string name="login_btforgetpwd">忘记密码</string>
    <string name="password_reset">修改密码</string>
    <string name="web_fontsize">调整字体</string>
    <string name="web_copyurl">复制链接</string>
    <string name="web_loading">页面加载中，请稍后</string>
    <string name="web_openbr">在浏览器中打开</string>
    <string name="web_small">Aa小</string>
    <string name="web_normal">Aa标准</string>
    <string name="web_large">Aa大</string>
    <string name="web_largest">Aa加大</string>
    <string name="aplipay_account">支付宝账号</string>
    <string name="aplipay_account_tip">例：zfu@163.com或者15866666666</string>
    <string name="aplipay_input">请输入支付宝账号</string>
    <string name="aplipay_name_tip">例：张三疯</string>
    <string name="aplipay_name">姓名</string>
    <string name="aplipay_name_input">请输入支付宝账户姓名</string>
    <string name="bank_num_tip">例：622588781107308888</string>
    <string name="bank_name_tip">例：深圳招商银行桂圆支行</string>
    <string name="bank_card">银行卡号</string>
    <string name="bank_card_input">请输入银行卡号</string>
    <string name="bank_name">开户名</string>
    <string name="bank_name_input">请输入开户名</string>
    <string name="bank_bank">开户行</string>
    <string name="bank_bank_input">请输入开户行</string>
    <string name="reg_phone">请输入手机号</string>
    <string name="reg_invite_phone">请输入推荐人手机号</string>
    <string name="reg_code">请输入验证码</string>
    <string name="reg_get_code">重新获取</string>
    <string name="reg_done">提交注册</string>
    <string name="reg_next">下一步</string>
    <string name="reg_pwd_tip">密码由6-15位数字组成</string>
    <string name="reg_set_pwd">请设置登录密码</string>
    <string name="reg_code_tip">"请输入接收到的验证码并提交
如果长时间未收到，请重新获取"</string>
    <string name="reg_tip1">系统已发送一条短信到您的手机</string>
</resources>