<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/layout_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/include_activity_title" />
    <LinearLayout android:background="@color/white" android:paddingLeft="20.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/more_item_height">
        <TextView android:textSize="@dimen/textsize16" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bank_card" />
        <EditText android:textSize="@dimen/textsize16" android:textColor="@color/black" android:id="@id/et_bank_num" android:background="@null" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:hint="@string/bank_card_input" android:maxLength="19" android:layout_weight="1.0" android:inputType="numberDecimal" />
    </LinearLayout>
    <TextView android:textSize="@dimen/textsize14" android:textColor="#ff9c9c9c" android:paddingLeft="20.0dip" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bank_num_tip" />
    <LinearLayout android:background="@color/white" android:paddingLeft="20.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/more_item_height">
        <TextView android:textSize="@dimen/textsize16" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:text="@string/bank_name" />
        <EditText android:textSize="@dimen/textsize16" android:textColor="@color/black" android:id="@id/et_bank_username" android:background="@null" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:hint="@string/bank_name_input" android:maxLength="20" android:layout_weight="1.0" />
    </LinearLayout>
    <TextView android:textSize="@dimen/textsize14" android:textColor="#ff9c9c9c" android:paddingLeft="20.0dip" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/aplipay_name_tip" />
    <LinearLayout android:background="@color/white" android:paddingLeft="20.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/more_item_height">
        <TextView android:textSize="@dimen/textsize16" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:text="@string/bank_bank" />
        <EditText android:textSize="@dimen/textsize16" android:textColor="@color/black" android:id="@id/et_bank" android:background="@null" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:hint="@string/bank_bank_input" android:maxLength="20" android:layout_weight="1.0" />
    </LinearLayout>
    <TextView android:textSize="@dimen/textsize14" android:textColor="#ff9c9c9c" android:paddingLeft="20.0dip" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bank_name_tip" />
</LinearLayout>