<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/logtip_fra" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="15.0sp" android:id="@id/text_log_tip" android:layout_width="wrap_content" android:layout_height="20.0dip" android:layout_marginLeft="10.0dip" android:text="@string/log_tip" />
        <Button android:textSize="15.0sp" android:gravity="center" android:id="@id/btn_clear_log" android:paddingTop="3.0dip" android:paddingBottom="3.0dip" android:layout_width="wrap_content" android:layout_height="33.0dip" android:layout_marginRight="15.0dip" android:text="@string/clear_log" />
    </LinearLayout>
    <ScrollView android:id="@id/stroll_text" android:background="#ff707070" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="5.0dip" android:layout_weight="1.0">
        <TextView android:id="@id/text_log" android:paddingLeft="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:textIsSelectable="true" />
    </ScrollView>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
        <LinearLayout android:orientation="horizontal" android:id="@id/firstBtnLine" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:id="@id/btn_initAK" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/text_btn_initAK" android:layout_weight="1.0" />
            <Button android:id="@id/btn_unbindTags" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/text_btn_unbind" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/secendBtnLine" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:id="@id/btn_ad_style_1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/text_btn_ad_style_1" android:layout_weight="1.0" />
            <Button android:id="@id/btn_ad_style_2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/text_btn_ad_style_2" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/thirdBtnLine" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:id="@id/btn_ad_style_3" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/text_btn_ad_style_3" android:layout_weight="1.0" />
            <Button android:id="@id/btn_ad_style_4" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/text_btn_ad_style_4" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/fourBtnLine" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:id="@id/btn_ad_style_5" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/text_btn_ad_style_5" android:layout_weight="1.0" />
            <Button android:id="@id/btn_ad_style_all" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/text_btn_ad_style_all" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/fiveBtnLine" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>