<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/layout_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/include_activity_title" />
    <LinearLayout android:background="@color/white" android:paddingLeft="20.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/more_item_height" android:layout_marginTop="15.0dip">
        <TextView android:textSize="@dimen/textsize16" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/aplipay_account" />
        <EditText android:textSize="@dimen/textsize16" android:textColor="@color/black" android:ellipsize="end" android:id="@id/et_alipay_account" android:background="@null" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:hint="@string/aplipay_input" android:singleLine="true" android:layout_weight="1.0" />
    </LinearLayout>
    <TextView android:textSize="@dimen/textsize14" android:textColor="#ff9c9c9c" android:paddingLeft="20.0dip" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/aplipay_account_tip" />
    <LinearLayout android:background="@color/white" android:paddingLeft="20.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/more_item_height">
        <TextView android:textSize="@dimen/textsize16" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="50.0dip" android:text="@string/aplipay_name" />
        <EditText android:textSize="@dimen/textsize16" android:textColor="@color/black" android:id="@id/et_real_name" android:background="@null" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:hint="@string/aplipay_name_input" android:layout_weight="1.0" />
    </LinearLayout>
    <TextView android:textSize="@dimen/textsize14" android:textColor="#ff9c9c9c" android:paddingLeft="20.0dip" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/aplipay_name_tip" />
</LinearLayout>