<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="#fffa6d00" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.35">
        <ImageView android:paddingTop="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/ic_logo_t" android:scaleType="center" android:layout_centerInParent="true" />
        <ImageView android:id="@id/iv_title_left" android:background="@drawable/sl_bg_title" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_back_white" />
    </RelativeLayout>
    <RelativeLayout android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.65">
        <RelativeLayout android:id="@id/ll_reg1" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:textSize="@dimen/textsize16" android:textColor="@drawable/sl_color_facus_w" android:textColorHint="@color/gray" android:id="@id/et_reg_phone" android:background="@null" android:paddingLeft="3.0dip" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="" android:hint="@string/reg_phone" android:singleLine="true" android:maxLength="11" android:drawableLeft="@drawable/ic_reg_phone" android:drawablePadding="10.0dip" android:inputType="phone" />
            <View android:layout_below="@id/et_reg_phone" style="@style/line_h" />
            <EditText android:textSize="@dimen/textsize16" android:textColor="@drawable/sl_color_facus_w" android:textColorHint="@color/gray" android:id="@id/et_reg_invite" android:background="@null" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:hint="@string/reg_invite_phone" android:singleLine="true" android:maxLength="11" android:drawableLeft="@drawable/ic_reg_invite" android:drawablePadding="14.0dip" android:layout_below="@id/et_reg_phone" android:inputType="phone" />
            <View android:layout_below="@id/et_reg_invite" style="@style/line_h" />
            <TextView android:id="@id/tv_reg_next" android:background="@drawable/sl_bt_login" android:layout_marginTop="30.0dip" android:text="@string/reg_next" android:layout_below="@id/et_reg_invite" style="@style/button_once" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/ll_reg2" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/textsize14" android:textColor="@color/gray" android:gravity="center" android:id="@id/tv_reg_tip" android:paddingTop="20.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/reg_tip1" />
            <EditText android:textSize="@dimen/textsize16" android:textColor="@drawable/sl_color_facus_w" android:textColorHint="@color/gray" android:id="@id/et_reg_code" android:background="@null" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/input_height" android:hint="@string/reg_code" android:singleLine="true" android:maxLength="6" android:drawableLeft="@drawable/ic_reg_code" android:drawablePadding="10.0dip" android:layout_below="@id/tv_reg_tip" android:inputType="number" />
            <TextView android:enabled="false" android:textSize="@dimen/textsize14" android:textColor="@drawable/sl_color_r_g" android:gravity="center" android:id="@id/tv_reg_code" android:background="@drawable/sl_bg_code" android:paddingLeft="6.0dip" android:paddingTop="8.0dip" android:paddingRight="6.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/reg_get_code" android:layout_alignTop="@id/et_reg_code" android:layout_alignParentRight="true" />
            <View android:layout_below="@id/et_reg_code" style="@style/line_h" />
            <EditText android:textSize="@dimen/textsize16" android:textColor="@drawable/sl_color_facus_w" android:textColorHint="@color/gray" android:id="@id/et_reg_pwd" android:background="@null" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/input_height" android:hint="@string/reg_set_pwd" android:singleLine="true" android:maxLength="15" android:drawableLeft="@drawable/ic_pwd_input" android:drawablePadding="10.0dip" android:layout_below="@id/et_reg_code" android:inputType="numberPassword" />
            <View android:layout_below="@id/et_reg_pwd" style="@style/line_h" />
            <TextView android:textSize="@dimen/textsize12" android:textColor="@color/gray" android:paddingTop="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reg_pwd_tip" android:layout_below="@id/et_reg_pwd" />
            <ImageView android:id="@id/tv_show_pwd" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/sl_cb_pwd" android:layout_alignBottom="@id/et_reg_pwd" android:layout_alignParentRight="true" />
            <TextView android:id="@id/tv_reg" android:background="@drawable/sl_bt_login" android:layout_marginTop="50.0dip" android:text="@string/reg_done" android:layout_below="@id/et_reg_pwd" style="@style/button_once" />
        </RelativeLayout>
    </RelativeLayout>
    <TextView android:textSize="@dimen/textsize12" android:textColor="@color/gray" android:gravity="center_horizontal" android:id="@id/tv_code_tip" android:paddingBottom="8.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/reg_code_tip" />
</LinearLayout>