<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/layout_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/titl" layout="@layout/include_activity_title" />
    <com.zqcall.mobile.view.MyWebView android:id="@id/webView1" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/titl" />
    <FrameLayout android:id="@id/framelayout" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/ll_loading" android:background="@color/white" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/titl">
        <ProgressBar android:id="@id/progressBar11" android:layout_width="wrap_content" android:layout_height="wrap_content" style="?android:attr/progressBarStyleSmall" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/web_loading" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/ll_fontsize" android:background="@color/white" android:visibility="gone" android:layout_width="80.0dip" android:layout_height="wrap_content" android:layout_below="@id/titl" android:layout_alignParentRight="true">
        <TextView android:textSize="@dimen/dimen_14sp" android:textColor="@color/text3_color" android:gravity="center" android:id="@id/tv_small" android:background="@drawable/sl_bg_title" android:paddingTop="@dimen/dimen_8dip" android:paddingBottom="@dimen/dimen_8dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/web_small" />
        <View android:background="@color/line_bg4" android:layout_width="wrap_content" android:layout_height="@dimen/dimen_0.5dip" android:layout_marginLeft="@dimen/dimen_10dip" android:layout_marginRight="@dimen/dimen_10dip" />
        <TextView android:textSize="@dimen/dimen_16sp" android:textColor="@color/text3_color" android:gravity="center" android:id="@id/tv_normal" android:background="@drawable/sl_bg_title" android:paddingTop="@dimen/dimen_8dip" android:paddingBottom="@dimen/dimen_8dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/web_normal" />
        <View android:background="@color/line_bg4" android:layout_width="wrap_content" android:layout_height="@dimen/dimen_0.5dip" android:layout_marginLeft="@dimen/dimen_10dip" android:layout_marginRight="@dimen/dimen_10dip" />
        <TextView android:textSize="@dimen/dimen_18sp" android:textColor="@color/text3_color" android:gravity="center" android:id="@id/tv_large" android:background="@drawable/sl_bg_title" android:paddingTop="@dimen/dimen_8dip" android:paddingBottom="@dimen/dimen_8dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/web_large" />
        <View android:background="@color/line_bg4" android:layout_width="wrap_content" android:layout_height="@dimen/dimen_0.5dip" android:layout_marginLeft="@dimen/dimen_10dip" android:layout_marginRight="@dimen/dimen_10dip" />
        <TextView android:textSize="@dimen/dimen_20sp" android:textColor="@color/text3_color" android:gravity="center" android:id="@id/tv_largest" android:background="@drawable/sl_bg_title" android:paddingTop="@dimen/dimen_8dip" android:paddingBottom="@dimen/dimen_8dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/web_largest" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/ll_more" android:background="@drawable/bg_pop_contactdetail" android:visibility="gone" android:layout_width="155.0dip" android:layout_height="wrap_content" android:layout_marginRight="@dimen/dimen_4dip" android:layout_below="@id/titl" android:layout_alignParentRight="true">
        <TextView android:textSize="@dimen/dimen_14sp" android:textColor="@color/text3_color" android:gravity="center_vertical" android:id="@id/tv_openbr" android:background="@drawable/sl_bg_title" android:paddingLeft="@dimen/dimen_6dip" android:paddingTop="@dimen/dimen_6dip" android:paddingBottom="@dimen/dimen_6dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/web_openbr" android:drawableLeft="@drawable/ic_open_br" />
        <View android:background="@color/line_bg4" android:layout_width="wrap_content" android:layout_height="@dimen/dimen_0.5dip" android:layout_marginLeft="@dimen/dimen_10dip" android:layout_marginRight="@dimen/dimen_10dip" />
        <TextView android:textSize="@dimen/dimen_13sp" android:textColor="@color/text3_color" android:gravity="center_vertical" android:id="@id/tv_fontsize" android:background="@drawable/sl_bg_title" android:paddingLeft="@dimen/dimen_6dip" android:paddingTop="@dimen/dimen_6dip" android:paddingBottom="@dimen/dimen_6dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/web_fontsize" android:drawableLeft="@drawable/ic_fontsize" />
        <View android:background="@color/line_bg4" android:layout_width="wrap_content" android:layout_height="@dimen/dimen_0.5dip" android:layout_marginLeft="@dimen/dimen_10dip" android:layout_marginRight="@dimen/dimen_10dip" />
        <TextView android:textSize="@dimen/dimen_13sp" android:textColor="@color/text3_color" android:gravity="center_vertical" android:id="@id/tv_copyurl" android:background="@drawable/sl_bg_title" android:paddingLeft="@dimen/dimen_6dip" android:paddingTop="@dimen/dimen_6dip" android:paddingBottom="@dimen/dimen_6dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/web_copyurl" android:drawableLeft="@drawable/ic_copy" />
    </LinearLayout>
</RelativeLayout>